@@ -8,6 +8,11 @@
 maint jit dump
   Dump an in-memory JIT object into a file.
 
+* Python API
+
+  ** Added gdb.record.clear(). Clears the trace data of the current recording.
+     This forces re-decoding of the trace for successive commands.
+
 * Changed remote packets
 
 qXfer:features:read:target.xml
